# pipeliner

./: .gitignore  Cargo.toml  LICENSE  README-es.md  README.md
crates/: Cargo.toml
crates/pipeliner-api/: Cargo.toml
crates/pipeliner-api/src/: lib.rs
crates/pipeliner-api/src/grpc/: mod.rs
crates/pipeliner-api/src/rest/: mod.rs
crates/pipeliner-api/src/types/: mod.rs
crates/pipeliner-cli/: Cargo.toml
crates/pipeliner-cli/src/: lib.rs  main.rs
crates/pipeliner-cli/src/commands/: mod.rs
crates/pipeliner-core/: Cargo.toml
crates/pipeliner-core/src/: agent.rs  environment.rs  lib.rs  matrix.rs  options.rs  parameters.rs  prelude.rs  validation.rs
crates/pipeliner-core/src/pipeline/: mod.rs
crates/pipeliner-events/: Cargo.toml
crates/pipeliner-events/src/: lib.rs
crates/pipeliner-events/src/event_bus/: mod.rs
crates/pipeliner-events/src/event_store/: in_memory.rs  mod.rs
crates/pipeliner-events/src/types/: base.rs  mod.rs
crates/pipeliner-executor/: Cargo.toml
crates/pipeliner-executor/src/: context.rs  lib.rs  listener.rs  local.rs  runtime.rs  strategy.rs
crates/pipeliner-infrastructure/: Cargo.toml
crates/pipeliner-infrastructure/src/: lib.rs  podman.rs  runtime.rs
crates/pipeliner-macros/: Cargo.toml
crates/pipeliner-macros/src/: lib.rs
crates/pipeliner-worker/: Cargo.toml
crates/pipeliner-worker/src/: lib.rs  pool.rs  queue.rs  scheduler.rs  state.rs
docs/: README.md  USER_MANUAL.md  architecture.md  conventions.md  epics.md  jenkins-sh-compatibility.md  rust-jenkins-dsl-study.md  rust-script-integration.md  shell-compatibility.md  tdd-strategy.md
examples/: docker_test.rs  dsl_demo.rs  mi_pipeline.rs  pipeline_demo.rs  pipeline_example.rs  podman_test.rs  test_bollard_api.rs
src/: lib.rs  macros.rs  main.rs  prelude.rs
src/cli/: check.rs  completions.rs  doc.rs  export.rs  lint.rs  mod.rs
src/executor/: local.rs  mod.rs  shell.rs  temp_files.rs  traits.rs
src/infrastructure/: config.rs  container.rs  docker.rs  github_actions.rs  gitlab_ci.rs  kubernetes.rs  logging.rs  metrics.rs  mod.rs  podman.rs
src/pipeline/: agent.rs  errors.rs  mod.rs  options.rs  pipeline_def.rs  plugins.rs  post.rs  shared_library.rs  stage.rs  steps.rs  types.rs  types_tests.rs
