[package]
name = "rustline"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Rustline Contributors"]
description = "A Jenkins Pipeline DSL in Rust - CLI tools for rust-script"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustline-org/rustline"
homepage = "https://github.com/rustline-org/rustline"
documentation = "https://docs.rs/rustline"
keywords = ["ci", "cd", "pipeline", "jenkins", "dsl"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"
once_cell = "1.19"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrent data structures
parking_lot = "0.12"

# Hash maps
ahash = "0.8"

# Command execution
shell-words = "1.1"

# Container runtime (native API)
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
async-trait = "0.1"
futures = "0.3"
url = "2.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3"
pretty_assertions = "1.4"

[features]
default = []
docker = []
kubernetes = []
github-actions = []
gitlab-ci = []

[[bin]]
name = "rustline"
path = "src/main.rs"

[lib]
name = "rustline"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
