[workspace]
members = [
    "pipeliner-core",
    "pipeliner-executor",
    "pipeliner-infrastructure",
    "pipeliner-worker",
    "pipeliner-events",
    "pipeliner-api",
    "pipeliner-cli",
    "pipeliner-macros",
]

resolver = "1"

[workspace.dependencies]
# Core dependencies shared across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"

# Logging and observability
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
once_cell = "1.19"
regex = "1"
shell-words = "1.1"
tempfile = "3"
dirs = "5"
url = "2.5"
base64 = "0.22"
parking_lot = "0.12"
dashmap = "6.0"

# Command execution
os_pipe = "1"

# Container runtime
kube = "0.92"
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_28"] }

# HTTP clients
reqwest = { version = "0.11", default-features = false, features = ["json"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
tower = { version = "0.5" }

# gRPC/Tonic
tonic = { version = "0.12", features = ["prost", "tls"] }
prost = { version = "0.13" }
prost-types = "0.13"

# REST API
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "auth"] }
warp = "0.3"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2"

# Database (optional)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.4"
rstest = "0.22"
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"

[patch.crates-io]
kube = { git = "https://github.com/kube-rs/kube", branch = "main" }
