[package]
name = "pipeliner-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = "gRPC and REST API layer for Pipeliner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pipeliner-org/pipeliner"
documentation = "https://docs.rs/pipeliner-api"
keywords = ["api", "grpc", "rest", "http"]
categories = ["development-tools"]

[dependencies]
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-executor = { path = "../pipeliner-executor" }
pipeliner-worker = { path = "../pipeliner-worker" }
pipeliner-events = { path = "../pipeliner-events" }

tonic = { workspace = true, features = ["prost", "tls"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-worker = { path = "../pipeliner-worker" }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lib]
name = "pipeliner_api"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
