[package]
name = "pipeliner-events"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = "Event sourcing infrastructure for Pipeliner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pipeliner-org/pipeliner"
documentation = "https://docs.rs/pipeliner-events"
keywords = ["events", "event-sourcing", "cqrs"]
categories = ["development-tools"]

[dependencies]
pipeliner-core = { path = "../pipeliner-core" }

tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = "6.0"

[dev-dependencies]
pipeliner-core = { path = "../pipeliner-core" }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lib]
name = "pipeliner_events"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
